# diffus

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  publish.sh  test.sh  wait_for_crate.sh
diffus/: Cargo.toml
diffus-derive/: Cargo.toml
diffus-derive-test/: Cargo.toml
diffus-derive-test/src/: lib.rs
diffus-derive/src/: lib.rs
diffus/src/: diffable_impls.rs  edit.rs  lcs.rs  lib.rs  same.rs  twodvec.rs
diffus/src/diffable_impls/: borrow.rs  collection.rs  hashmap.rs  i32.rs  indexmap.rs  map.rs  mod.rs  option.rs  primitives.rs  set.rs  string.rs  vec.rs
diffus/src/edit/: collection.rs  enm.rs  map.rs  mod.rs  set.rs  string.rs
example/: Cargo.toml
example/src/: main.rs
src/: diffable_impls.rs  edit.rs  lib.rs
