[package]
name = "diffus-derive-test"
version = "0.1.0"
authors = ["Jim Holmström <jim.holmstroem@gmail.com>"]
edition = "2018"


[dependencies]
diffus = { path = "../diffus" }
diffus-derive = { path = "../diffus-derive" }

serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []

serialize-impl = [ "serde", "serde_json" ]
