[package]
name = "diffus-derive-test"
version = "0.8.1"
authors = [
    "Jim Holmström <jim.holmstroem@gmail.com>",
    "Johan Gardell <736172+gardell@users.noreply.github.com>",
]

description = "Tests to verify that derive(diffus) works as expected"

homepage = "https://github.com/distil/diffus"

publish = false

license = "Apache-2.0"

edition = "2018"


[dependencies]
diffus = { path = "../diffus", features = [ "derive" ]}

serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []

serialize-impl = [ "diffus/serialize-impl", "serde", "serde_json" ]
