[package]
name = "diffus-derive"
version = "0.1.0"
authors = ["Jim Holmström <jim.holmstroem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.5"
quote = "1.0.2"

diffus = { path = ".." }

[lib]
proc-macro = true
