[package]
name = "diffus"
version = "0.1.0"
authors = ["Jim Holmström <jim.holmstroem@gmail.com>"]
edition = "2018"


[dependencies]
indexmap = { version = "1", optional = true }
itertools = "0.8"
uuid = { version = "0.7", optional = true }

[features]
default = []

indexmap-impl = [ "indexmap" ]
uuid-impl = [ "uuid" ]
