[package]
name = "diffus"
version = "0.1.0"
authors = ["Jim Holmström <jim.holmstroem@gmail.com>"]
edition = "2018"


[dependencies]
itertools = "0.8"

indexmap = { version = "1", optional = true }
uuid = { version = "0.7", optional = true }
snake_case = { version = "0.2", optional = true }

serde = { version = "1.0", features = [ "derive" ], optional = true }


[features]
default = []

indexmap-impl = [ "indexmap" ]
uuid-impl = [ "uuid" ]
snake_case-impl = [ "snake_case" ]

serialize-impl = [
    "uuid/serde",
    "snake_case/serde"
]
