[package]
name = "diffus"
version = "0.4.0"
authors = [
    "Jim Holmström <jim.holmstroem@gmail.com>",
    "Johan Gardell <736172+gardell@users.noreply.github.com>",
]

description = "Finds the difference between two instances of any data structure. Supports: collections, Strings, Maps etc. Uses LCS where applicable. Also supports derive via `diffus-derive`."

homepage = "https://github.com/distil/diffus"
repository = "https://github.com/distil/diffus"
documentation = "https://docs.rs/diffus"

readme = "../README.md"

keywords = [ "algorithm", "diff", "difference", "data", "data-structure" ]
categories = [ "algorithms", "data-structures" ]
publish = [ "crates-io" ]

license = "Apache-2.0"

edition = "2018"


[lib]
name = "diffus"
path = "src/lib.rs"


[dependencies]
itertools = "0.8"

indexmap = { version = "1", optional = true }
uuid = { version = "0.7", optional = true }
snake_case = { version = "0.2", optional = true }

serde = { version = "1.0", features = [ "derive" ], optional = true }


[features]
default = []

indexmap-impl = [ "indexmap" ]
uuid-impl = [ "uuid" ]
snake_case-impl = [ "snake_case" ]

serialize-impl = [
    "serde",
    "indexmap/serde-1",
    "uuid/serde",
    "snake_case/serde"
]
